--- a/backend/ITHackathon/templates/index.html
+++ b/backend/ITHackathon/templates/index.html
@@ -84,7 +84,7 @@
   </div>
 
   <script>
-    const socket = new WebSocket('ws://localhost:8000/ws/chat/');
+    const socket = new WebSocket('ws://194.195.119.244/ws/chat/');
     const chatOutput = document.getElementById('chat-output');
     const messageInput = document.getElementById('message-input');
     const sendButton = document.getElementById('send-button');
